--- a/TP2-Inmobiliaria-grupo-4/Properties/Resources.resx
+++ b/TP2-Inmobiliaria-grupo-4/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="2019-11-14_1821" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\2019-11-14_1821.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="consultainmobi" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\consultainmobi.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
